Fix contrast issue

--- a/hra/patternlab/site/sass/molecules/_newsletter-signup.scss
+++ b/hra/patternlab/site/sass/molecules/_newsletter-signup.scss
@@ -46,6 +46,7 @@
 
     &__label {
         @include hidden;
+        color: #fff;
     }
 
     &__input {
